; ModuleID = '/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/filters/extr_mbfilter_iso8859_15.c_mbfl_filt_conv_8859_15_wchar.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/filters/extr_mbfilter_iso8859_15.c_mbfl_filt_conv_8859_15_wchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 (i32, i32)* }

@iso8859_15_ucs_table = common dso_local global i32* null, align 8
@MBFL_WCSPLANE_MASK = common dso_local global i32 0, align 4
@MBFL_WCSPLANE_8859_15 = common dso_local global i32 0, align 4
@MBFL_WCSGROUP_MASK = common dso_local global i32 0, align 4
@MBFL_WCSGROUP_THROUGH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbfl_filt_conv_8859_15_wchar(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = icmp sge i32 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 160
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i32, i32* %3, align 4
  store i32 %12, i32* %5, align 4
  br label %46

13:                                               ; preds = %8, %2
  %14 = load i32, i32* %3, align 4
  %15 = icmp sge i32 %14, 160
  br i1 %15, label %16, label %37

16:                                               ; preds = %13
  %17 = load i32, i32* %3, align 4
  %18 = icmp slt i32 %17, 256
  br i1 %18, label %19, label %37

19:                                               ; preds = %16
  %20 = load i32*, i32** @iso8859_15_ucs_table, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sub nsw i32 %21, 160
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %20, i64 %23
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp sle i32 %26, 0
  br i1 %27, label %28, label %36

28:                                               ; preds = %19
  %29 = load i32, i32* %3, align 4
  store i32 %29, i32* %5, align 4
  %30 = load i32, i32* @MBFL_WCSPLANE_MASK, align 4
  %31 = load i32, i32* %5, align 4
  %32 = and i32 %31, %30
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* @MBFL_WCSPLANE_8859_15, align 4
  %34 = load i32, i32* %5, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %28, %19
  br label %45

37:                                               ; preds = %16, %13
  %38 = load i32, i32* %3, align 4
  store i32 %38, i32* %5, align 4
  %39 = load i32, i32* @MBFL_WCSGROUP_MASK, align 4
  %40 = load i32, i32* %5, align 4
  %41 = and i32 %40, %39
  store i32 %41, i32* %5, align 4
  %42 = load i32, i32* @MBFL_WCSGROUP_THROUGH, align 4
  %43 = load i32, i32* %5, align 4
  %44 = or i32 %43, %42
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %37, %36
  br label %46

46:                                               ; preds = %45, %11
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 1
  %49 = load i32 (i32, i32)*, i32 (i32, i32)** %48, align 8
  %50 = load i32, i32* %5, align 4
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = call i32 %49(i32 %50, i32 %53)
  %55 = call i32 @CK(i32 %54)
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local i32 @CK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
